feat: add fault injection controller
