# oas/openapi.yaml
@@ -101,6 +101,20 @@ paths:
                 type: string
                 description: A sad message
 
+  /faults:
+    get:
+      tags:
+        - FaultInjection
+      summary: Get currently enabled fault injections
+      responses:
+        200:
+          description: List of configured fault injections
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ConfiguredFault"
   /faults/inject:
     post:
       tags:
@@ -116,6 +130,10 @@ paths:
       responses:
         201:
           description: Fault has been injected
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConfiguredFault"
 
 components:
   schemas:
@@ -163,6 +181,7 @@ components:
         count:
           type: integer
           format: int64
+          minimum: 1
         error:
           # this has to be a stand-alone schema for oapi-codgen to make
           # constants for it
@@ -189,3 +208,21 @@ components:
         - grpc.Unavailable
         - grpc.DataLoss
         - grpc.Unauthenticated
+
+    ConfiguredFault:
+      type: object
+      additionalProperties: false
+      required:
+        - operation
+        - count
+      properties:
+        operation:
+          type: string
+          minLength: 1
+        parameters:
+          type: object
+          additionalProperties:
+            type: string
+        count:
+          type: integer
+          format: int64
